Fixed (For the 3rd Partial)
Hi,

Good Day!

I have fixed the last paragraph of my localization, accidentally erased the last sentences on that one.

Thank you.

Best Regards,

josephace135 | Joseph Ace Tigas

--- a/ceb/Economics and Ethics of Private Property Studies in Political Economy and Philosophy/03_p02_ch09_02.md
+++ b/ceb/Economics and Ethics of Private Property Studies in Political Economy and Philosophy/03_p02_ch09_02.md
@@ -46,7 +46,7 @@ Kini nga pagsaway sa empirisismo ug historisismo kay nakapamatuod sa kasagaran n
 
 [^11]: Tan-awa kang Immanuel Kant, *Kritik der reinin Vernunft*, sa kana usab, *Werke*, 12 ka bols., ed. W. Weischedel (Frankfurt/M.: Suhrkamp, 1968), bol. 3, p. 45; Ludwig von Mises, *Aksyon sa Tawo: Usa ka Pamatbat ngadto sa Ekonomiko* (Chicago: Regnery, 1966), p. 38.
 
-Si Mises mingpakita nga duha ka mga panginahanglanon kay natuman pinaagi sa unsa nga iyaha nga gihinganlan og aksyoma sa aksyon (pananglitan, ang proposisyon nga ang mga tawo naglihok, nga sila nagapakita og linihokan nga tinuyo).[^12] Sa tataw, kini nga aksyoma kay wala gikuha gikan sa obserbasyon—adunay lang gyud lawasnon nga mga kalihokan nga kinahanglan nga obserbaran pero walay susama nga butang sama sa mga aksyon—pero naggikan hinoon ngadto sa napamalandong nga pagsabot. Ug kini nga pagsabot nga anaay kalabotan sa usa ka proposisyon nga makita sa kaugalingon, kay kini nga kamatuoran kay dili mamahimo nga ilimod, tungod kay ang paglimod mismo mamahimo nga makategorisa isip usa ka aksyon. Pero dili ba kini ginagmay lang? Ug unsa man ang buhaton sa ekonomiko kabahin niini? Alangan, sa miagi kana kay nailhan nga mga konsepto sa ekonomika sama sa mga presyo, mga balor, produksyon, kwarta, ug pagpangutang nga adunay usa ka butang nga pagabuhatan kabahin sa kamatuoran nga anaay mga tawo nga nagalihok. Pero kana ug giunsa sa tanan nga ekonomiko nga mamahimo nga mamahimo nga basehan ug magtukod pag usab base ngadto sa susama nga walay hinungdan nga proposisyon, mao nga bisan unsa nga butang pero klaro.
+Si Mises mingpakita nga duha ka mga panginahanglanon kay natuman pinaagi sa unsa nga iyaha nga gihinganlan og aksyoma sa aksyon (pananglitan, ang proposisyon nga ang mga tawo naglihok, nga sila nagapakita og linihokan nga tinuyo).[^12] Sa tataw, kini nga aksyoma kay wala gikuha gikan sa obserbasyon—adunay lang gyud lawasnon nga mga kalihokan nga kinahanglan nga obserbaran pero walay susama nga butang sama sa mga aksyon—pero naggikan hinoon ngadto sa napamalandong nga pagsabot. Ug kini nga pagsabot nga anaay kalabotan sa usa ka proposisyon nga makita sa kaugalingon, kay kini nga kamatuoran kay dili mamahimo nga ilimod, tungod kay ang paglimod mismo mamahimo nga makategorisa isip usa ka aksyon. Pero dili ba kini ginagmay lang? Ug unsa man ang buhaton sa ekonomiko kabahin niini? Alangan, sa miagi kana kay nailhan nga mga konsepto sa ekonomika sama sa mga presyo, mga balor, produksyon, kwarta, ug pagpangutang nga adunay usa ka butang nga pagabuhatan kabahin sa kamatuoran nga anaay mga tawo nga nagalihok. Pero kana ug giunsa sa tanan nga ekonomiko nga mamahimo nga mamahimo nga basehan ug magtukod pag usab base ngadto sa susama nga walay hinungdan nga proposisyon, mao nga bisan unsa nga butang pero klaro. It is one of Mises’s greatest achievements to have shown precisely that there are insights implied in this psychologically speaking trivial axiom of action that were not themselves psychologically self-evident as well; and that it is these insights which provide the foundation for the theorems of economics as true a priori synthetic propositions.
 
 [^12]: On the following see in particular Mises, *Human Action*, chap. IV; Murray N. Rothbard, *Man, Economy, and State* (Los Angeles: Nash, 1962), chap. 1.
 
